--- a/public/css/common.css
+++ b/public/css/common.css
@@ -147,11 +147,12 @@ a:hover {
   border:1px solid #ddd;
   margin-top:10px;
   padding:10px;
+  border-radius:3px;
 }
 .wiki-side-bar {
   border:1px solid #ddd;
-  margin-top:10px;
   padding:10px;
+  border-radius:3px;
 }
 
 .wiki-home-link {
