--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2336,6 +2336,12 @@ a:hover .btn-delete {
   background-color: #942a25;
 }
 
+.count-label {
+  background-color: rgba(128, 128, 128, 0.2);
+  padding: 4px 6px 1px 6px;
+  border-radius: 6px;
+}
+
 /* alert */
 .alert {
   padding: 8px 35px 8px 14px;
