Support for issue comment notification by e-mail and subscription.
Users can be subscribed to an issue by creating the issue, commenting,
being mentioned or owning the repository. At any time they can
explicitly subscribe/unsubscribe via a button on the issue page.

Notifications can be sent either by SMTP or the external sendmail
program. Note that esmtp's sendmail is not suitable for that use.

PR handling is not (yet) ready for notifications. Likewise, it is not
possible to comment an issue by replying to a notification mail.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -444,6 +444,32 @@ a.wiki-btn-history:hover {
   padding:4px 5px;
   color:#333;
 }
+.issue-subscription {
+  padding-top: 5px;
+  display: block;
+  width: 100%;
+}
+.subscription-btn {
+  display: inline-block;
+  padding: 3px;
+  width: 100%;
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 1px;
+}
+.subscription-btn:hover {
+  background: #d0d0d0;
+}
+.subscription-btn-icon {
+  vertical-align: middle;
+}
+.subscription-btn-text {
+}
+.notif-reason {
+  width: 100%;
+  color: #767676;
+  margin-top: 5px;
+}
 .labels-new-panel {
   text-align:right;
   margin-bottom:20px;
