--- a/public/css/common.css
+++ b/public/css/common.css
@@ -3598,10 +3598,16 @@ a:hover .btn-delete {
 }
 
 /* Numbered pagination */
-.pagination-num　{
-  margin:20px 0
+.pagination-num-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 25px;
 }
-.pagination-num ul　{
+.pagination-num {
+  margin:20px 0;
+}
+.pagination-num ul {
   display:inline-block;
   margin-bottom:0;
   margin-left:0;
@@ -3620,6 +3626,10 @@ a:hover .btn-delete {
   background-color:#fff;
   border:1px solid #ddd;
   border-left-width:0
+}
+.pagination-num ul > li.separator > span {
+  border-top: none;
+  border-bottom: none;
 }
 .pagination-num ul > li > a:hover,
 .pagination-num ul > .active > a,
@@ -3652,6 +3662,10 @@ a:hover .btn-delete {
 {
   border-top-right-radius:4px;
   border-bottom-right-radius:4px;
+}
+.pagination-num ul > li.disabled > a {
+  pointer-events: none;
+  cursor: default;
 }
 
 /* Branches */
