Improve wiki page
- Keep the wiki header in create/update pages to allow easy page list
  access.
- Add a cancel button to create/update dialog.
- Restrict update to collaborators.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2284,7 +2284,7 @@ button.close {
   -webkit-appearance: none;
 }
 
-.btn-fork, .btn-new, .btn-delete, .btn-watch {
+.btn-fork, .btn-new, .btn-delete, .btn-watch, btn-cancel {
   font-size:13px;
   padding:5px 20px;
   height:28px;
