Change css for tree page "About". font-weight:normal

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -372,6 +372,7 @@ a.wiki-btn-history:hover {
   color:#112;
   margin-bottom:7px;
   padding-left:6px;
+  font-weight:normal;
 }
 .tree-description a {
   font-size:18px;
