Change CSS of file names in file tree.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2437,6 +2437,11 @@ a:hover .btn-delete {
 .file-list-name {
   width:25%;
   float:left;
+  padding-left:7px;
+}
+
+.file-list-name a {
+  color:#555;
 }
 
 .file-list-commit {
