Add GitPrep logo
Use it on application header and in README.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1230,6 +1230,13 @@ input[type=text], input[type=password] {
   width:350px;
 }
 
+.header-logo {
+  fill: white;
+  width: 22px !important;
+  height: 22px !important;
+  margin-right: 20px;
+}
+
 .header {
   background:#004763;
   overflow:hidden;
