--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1240,7 +1240,7 @@ input[type=text], input[type=password] {
 .header {
   background:#004763;
   overflow:hidden;
-  padding:3px 0;
+  padding:6px 18px 2px;
 }
 
 .header-left {
