Rework of blame page
- Check for revision/file existence
- Change page title
- Remove breadcrumb trailing slash
- Add a last commit header
- Commit author has name and e-mail in tooltip and links to author page,
  if some
- Commit short summary links to commit and shows full summary in tooltip
- Revision display/link replaced by a link to previous blame
- Commit lines groups separated by an horizontal line
- Line numbers right-justified
- At least 60% of the width is allocated to the line data
- Use non-paddable whitespaces in line data, avoiding multiple space
  suppression

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2615,6 +2615,30 @@ a:hover .btn-delete {
   text-align:right:
 }
 
+.blame-commit {
+  width: 100%;
+  padding: 10px 0;
+  margin-top: 20px;
+  border: 1px solid #e6e9e6;
+  border-radius: 10px;
+  color: gray;
+}
+
+.blame-commit > *,
+.blame-commit-right > * {
+  display: inline;
+  margin: 0 10px;
+}
+
+.blame-commit-author {
+  font-weight: bold;
+  color: black;
+}
+
+.blame-commit-right {
+  float: right;
+}
+
 .blame-body-container {
   overflow-x:scroll;
   border:1px solid #e6e9e6;
@@ -2624,6 +2648,10 @@ a:hover .btn-delete {
 .blame-body {
   width:100%;
   border-collapse: collapse;
+}
+
+.blame-group-separator {
+  border-top: 1px solid #e6e9e6;
 }
 
 .blame-body-left {
@@ -2638,6 +2666,7 @@ a:hover .btn-delete {
   color:gray;
   font-size:12px;
   vertical-align:middle;
+  text-align: right;
   border-right:1px solid #e6e9e6;
 }
 
@@ -2645,7 +2674,8 @@ a:hover .btn-delete {
   padding:5px 10px;
   vertical-align:middle;
   white-space: nowrap;
-  border-right:none
+  border-right:none;
+  min-width: 60%;
 }
 
 .blame-summary-container {
