Move edition icons javascript to Gitprep namespace
Drop IE support.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -702,6 +702,7 @@ ul.issues-label-pallet {
 }
 .add-comment-icons > * {
   cursor:pointer;
+  margin-left: 6px;
 }
 
 .issue-add-comment-header-tab a.disable {
