--- a/public/css/common.css
+++ b/public/css/common.css
@@ -3359,6 +3359,8 @@ a:hover .btn-delete {
 }
 .commit-diff-header {
   overflow:hidden;
+  position: sticky;
+  top: 0;
 }
 .commit-diff-header > :first-child {
   float:left;
@@ -3389,6 +3391,73 @@ a:hover .btn-delete {
   text-align:center;
   padding-top:40px;
   padding-bottom:40px;
+}
+
+.diff-line {
+  font-size: 12px;
+  text-align: right;
+  color: #a0a0a0;
+  padding: 0 7px;
+  border-right: 1px solid;
+  border-color: inherit;
+}
+.diff-text {
+  width: 100%;
+  padding-left: 7px;
+}
+.diff-text pre {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+}
+.diff-chunk-header {
+  background-color: #f8f8ff;
+  border-color: #e4e4ff;
+}
+.diff-chunk-header .diff-line {
+  background-color: #f3f3ff;
+  text-align: center;
+  padding: 0;
+}
+.diff-chunk-header .diff-line > * {
+  display: inline-block;
+  width: 100%;
+}
+.diff-chunk-header .diff-text {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.diff-fold-button:hover {
+  background-color: #a0a0ff;
+  color: white;
+  fill: white;
+}
+.diff-from-file {
+  background-color: #f0d0d0;
+  border-color: #e9aeae;
+}
+.diff-from-file .diff-line {
+  background-color: #f7c8c8;
+}
+.diff-to-file {
+  background-color: #ddffdd;
+  border-color: #b4e2b4;
+}
+.diff-to-file .diff-line {
+  background-color: #ceffce;
+}
+.diff-nodiff,
+.diff-neutral {
+  border-color: #e5e5e5;
+}
+.diff-expand-collapse-button {
+  margin-left: 10px;
+  padding: 8px;
+  border-radius: 30%;
+}
+.diff-expand-collapse-button:hover {
+  background-color: #e6e6e6;
 }
 
 .compare-select {
