Change README display
- Fix url mapping in markdown
- Add mail links to text versions
- Feature community health files

To speed-up file searches, use a file location cache and load trees
without commit info.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2350,17 +2350,36 @@ a:hover .btn-delete {
 }
 
 .readme-header {
+  position: sticky;
+  top: 0;
+  background-color: white;
   border-radius: 3px 3px 0 0;
   border: 1px solid #e6e9e6;
-  border-bottom: 0;
-  padding: 9px 10px 10px;
+  padding: 9px 10px 0px;
   font-size: 12px;
   line-height: 17px;
-  font-weight:bold;
 }
-
 .readme-frame {
   border: 1px solid #e6e9e6;
+  border-top: 0;
+}
+.readme-tab {
+  display: inline-block;
+  padding: 0 8px 8px 8px;
+  cursor: pointer;
+}
+.readme-tab svg {
+  margin-right: 3px;
+}
+.readme-tab.selected {
+  border-bottom: 2px solid #ff0000;
+  font-weight:bold;
+}
+.readme-pane {
+  display: none;
+}
+.readme-pane.selected {
+  display: block;
 }
 
 .commit-summary {
